# cmd/server/main.go
@@ -1,11 +1,15 @@
 package main
 
 import (
+	"log"
+
 	"github.com/DanielVavgenczak/api-products/docs"
+	"github.com/DanielVavgenczak/api-products/internal/config"
 	"github.com/DanielVavgenczak/api-products/internal/http/handler"
 	"github.com/DanielVavgenczak/api-products/internal/infra/database"
 	"github.com/DanielVavgenczak/api-products/internal/infra/repository"
 	"github.com/DanielVavgenczak/api-products/internal/infra/services"
+	"github.com/DanielVavgenczak/api-products/internal/middleware"
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -28,6 +32,10 @@ import (
 // @schemes http
 func main() {
 	r := gin.Default()
+	ok := config.LoadEnv()
+	if !ok {
+		log.Fatal("error in load env")
+	}
 	db := database.InitDB()
 	repositories := repository.InitRepository(db)
 	services := services.InitServices(*repositories)
@@ -36,7 +44,10 @@ func main() {
 
 	docs.SwaggerInfo.BasePath = "/api/v1"
 	v1 := r.Group("/api/v1")	
+	v1.POST("/login", userHandler.HandleLogin)
 	v1.POST("/user", userHandler.HandlerCreateUser)
+	v1.GET("/user/:id", middleware.Authentication(), userHandler.HandleFindByID)
+	// badgg.irlk
 	urlDoc := ginSwagger.URL("http://localhost:8080/docs/doc.json") 
 	r.GET("/docs/*any", ginSwagger.WrapHandler(swaggerfiles.Handler,urlDoc))
 	r.Run() 
